--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1229,7 +1229,7 @@ table.custom-table {
     }
 
     .btn {
-      display: inline-block;
+      width: 214px;
     }
   }
 
@@ -1306,7 +1306,7 @@ table.custom-table {
         }
 
         h3 {
-          font-weight: 500;
+          font-weight: 600;
         }
       }
     }
@@ -1706,15 +1706,25 @@ table.custom-table {
 // ***********************************************************************************************************************************
 
 .transactions-sidenav-right {
-  @media screen and (max-width: 1200px) {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
+  @media screen and (max-width: 991px) {
+    padding-left: 5rem !important;
+    padding-right: 5rem !important;
+  }
+
+  @media screen and (max-width: 768px) {
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
   }
 }
 
 #transactions {
   .title {
     position: relative;
+    padding-bottom: 1.25rem;
+
+    @media screen and (min-width: 769px) {
+      border-bottom: 1px solid $color30;
+    }
 
     @media screen and (max-width: 991px) {
       padding-bottom: 1rem;
@@ -1722,28 +1732,55 @@ table.custom-table {
       &::after {
         content: "";
         bottom: -0.25rem;
-        left: -2rem;
+        left: -3rem;
         position: absolute;
         width: 100vw;
         height: 1px;
         background-color: $color30;
+
+        @media screen and (min-width: 769px) {
+          display: none;
+        }
       }
     }
 
     img.back {
       position: absolute;
-      top: 0.325rem;
-      left: -1.5rem;
+      top: 0.25rem;
+      left: -2rem;
 
-      @media screen and (min-width: 992px) {
+      @media screen and (min-width: 769px) {
         display: none;
+      }
+
+      @media screen and (max-width: 575px) {
+        top: 0.125rem;
       }
     }
   }
 
+  .search-sm-container {
+    @media screen and (max-width: 768px) {
+      position: relative;
+      bottom: 0.75rem;
+    }
+  }
+
   .search-sm {
+    @media screen and (max-width: 700px) {
+      width: 20px;
+
+      img {
+        right: -8px;
+      }
+    }
+
     input {
       border-color: $color31;
+      @media screen and (max-width: 700px) {
+        width: 20px;
+        opacity: 0;
+      }
     }
   }
 
@@ -1751,6 +1788,10 @@ table.custom-table {
     width: 94px;
     height: 40px;
     margin-left: 3rem;
+
+    @media screen and (max-width: 700px) {
+      margin-left: 1.5rem;
+    }
   }
 
   .select-selected {
@@ -1759,6 +1800,10 @@ table.custom-table {
   }
 
   .transactions-body {
+    @media screen and (max-width: 575px) {
+      margin-left: -1.5rem;
+    }
+
     .transaction {
       position: relative;
       display: flex;
@@ -1767,10 +1812,6 @@ table.custom-table {
       padding: 1rem 0;
       border-bottom: 1px solid $color19;
 
-      @media screen and (min-width: 1367px) {
-        padding-right: 0.5rem;
-      }
-
       @media screen and (max-width: 575px) {
         width: 100%;
         flex-wrap: wrap;
@@ -1778,7 +1819,7 @@ table.custom-table {
         &::after {
           content: url("../vector/arrow-right.svg");
           position: absolute;
-          top: 2.25rem;
+          top: 1.5rem;
           right: 0;
         }
       }
@@ -1808,14 +1849,14 @@ table.custom-table {
         }
 
         &:nth-child(2) {
-          width: 20%;
+          width: 18%;
 
           @media screen and (max-width: 1590px) {
-            width: 25%;
+            width: 20%;
           }
 
           @media screen and (max-width: 1100px) {
-            width: 27%;
+            width: 20%;
           }
 
           @media screen and (max-width: 991px) {
@@ -1830,15 +1871,15 @@ table.custom-table {
           @media screen and (max-width: 575px) {
             width: 30%;
             justify-content: flex-start;
-            padding-left: 4rem;
+            padding-left: 3rem;
           }
         }
 
         &:nth-child(3) {
-          width: 25%;
+          width: 20%;
 
           @media screen and (max-width: 1590px) {
-            width: 30%;
+            width: 25%;
           }
 
           @media screen and (max-width: 1270px) {
@@ -1875,6 +1916,10 @@ table.custom-table {
         display: flex;
         align-items: center;
 
+        @media screen and (max-width: 575px) {
+          margin-bottom: 1rem;
+        }
+
         .text {
           h4 {
             @media screen and (max-width: 1590px) {
@@ -1889,6 +1934,10 @@ table.custom-table {
 
         img {
           width: 48px;
+
+          @media screen and (max-width: 1366px) {
+            width: 32px;
+          }
         }
       }
 
@@ -1905,10 +1954,15 @@ table.custom-table {
 
         .btn {
           width: 100px;
+          border-width: 0.5px;
+          height: 32px;
+          font-size: 15px;
+          font-weight: 600;
 
           @media screen and (max-width: 1366px) {
-            font-size: 12px;
+            font-size: 11px;
             width: 72px;
+            height: 24px;
             padding-left: 0;
             padding-right: 0;
           }
@@ -2001,6 +2055,10 @@ table.custom-table {
       .status {
         .btn {
           width: 100px;
+          border-width: 0.5px;
+          height: 32px;
+          font-size: 16px;
+          font-weight: 600;
         }
       }
     }
@@ -2063,17 +2121,62 @@ table.custom-table {
 // ***********************************************************************************************************************************
 
 #profile {
+  padding: 0 1rem;
+
+  @media screen and (max-width: 991px) and (min-width: 769px) {
+    padding: 0 3rem;
+  }
+
+  @media screen and (max-width: 575px) {
+    padding: 0 1.5rem;
+  }
+
+  .profile-main > .container-fluid > .row > *:not(:last-child) {
+    @media screen and (min-width: 992px) {
+      padding-right: 3rem;
+    }
+
+    @media screen and (max-width: 991px) {
+      padding-right: 1rem;
+    }
+  }
+
   .my-profile {
-    @media screen and (max-width: 991px) and (min-width: 576px) {
-      transform: translateX(-1rem);
+    padding-bottom: 1rem;
+    border-bottom: 1px solid $color19;
+    position: relative;
+
+    // @media screen and (max-width: 991px) and (min-width: 576px) {
+    //   transform: translateX(-1rem);
+    // }
+    @media screen and (max-width: 768px) {
+      margin-left: -2.5rem;
+      margin-right: -2.5rem;
+      padding-left: 2.5rem;
+      padding-top: 1rem;
+    }
+
+    @media screen and (max-width: 575px) {
+      padding-left: 2rem;
+    }
+
+    .back {
+      position: absolute;
+      left: 0.25rem;
+      top: 50%;
+      transform: translateY(-50%);
+
+      @media screen and (max-width: 575px) {
+        position: static;
+        transform: translateY(0);
+      }
     }
   }
   .custom-form-control {
     margin-top: 1.5rem;
-    max-width: 374px;
 
     @media screen and (max-width: 1366px) {
-      max-width: 272px;
+      // max-width: 272px;
     }
 
     @media screen and (max-width: 991px) {
@@ -2162,26 +2265,40 @@ table.custom-table {
 #notifications {
   padding-left: 7rem;
   padding-right: 7rem;
+  position: relative;
 
   @media screen and (max-width: 1366px) {
     padding-left: 5rem;
     padding-right: 5rem;
   }
 
-  @media screen and (max-width: 767px) {
-    padding-left: 3rem;
-    padding-right: 3rem;
+  @media screen and (max-width: 991px) {
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  @media screen and (max-width: 575px) {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  @media screen and (max-width: 768px) {
+    padding-top: 1.5rem;
   }
 
   .head {
     display: flex;
     justify-content: flex-start;
     align-items: flex-end;
+    position: relative;
+
+    .close {
+      position: absolute;
+      right: 0;
+      width: 24px;
+      height: 24px;
+      top: 50%;
+      transform: translateY(-50%);
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
 
     @media screen and (max-width: 767px) {
       justify-content: space-between;
@@ -2197,7 +2314,7 @@ table.custom-table {
           transform: translateY(-50%);
           left: -2rem;
 
-          @media screen and (min-width: 767px) {
+          @media screen and (min-width: 769px) {
             display: none;
           }
         }
@@ -2236,7 +2353,7 @@ table.custom-table {
       border-bottom: 1px solid $color19;
 
       .action {
-        @media screen and (max-width: 440px) {
+        @media screen and (max-width: 525px) {
           display: none;
         }
       }
@@ -2254,10 +2371,16 @@ table.custom-table {
         left: -2rem;
         top: 1.45rem;
 
+        @media screen and (max-width: 1366px) {
+          left: -1.5rem;
+          top: 1.25rem;
+        }
+
         @media screen and (max-width: 767px) {
           width: 8px;
           height: 8px;
           left: -1.25rem;
+          top: 1.4rem;
         }
       }
 
