--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -4,6 +4,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .d-768-none {
+    display: none !important;
+  }
+}
+
 main {
   overflow: hidden;
 }
@@ -451,6 +457,7 @@ div.shadowy {
 .explore .posts .post .info .time {
   font-size: 14px;
   color: #bcbcbc;
+  margin-top: 0.75rem;
 }
 
 @media screen and (max-width: 680px) {
@@ -1122,8 +1129,18 @@ div.shadowy {
 }
 
 @media screen and (max-width: 1366px) {
-  .btn.w-80px {
+  .btn.w-1366-80px {
     width: 80px;
+  }
+}
+
+.btn.h-32px {
+  height: 32px;
+}
+
+@media screen and (max-width: 1366px) {
+  .btn.h-32px {
+    height: 24px;
   }
 }
 
@@ -1359,15 +1376,22 @@ input.custom-input,
 textarea.custom-input,
 .time-input {
   font-family: "Source Sans Pro", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   width: 100%;
   background-color: transparent;
   border-radius: 5px;
   padding: 0.6125rem 1rem;
-  border: 1px solid #e8e8e8;
+  border: 1px solid #d8d8d8;
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
   color: #31353f;
+}
+
+input.custom-input:disabled,
+textarea.custom-input:disabled,
+.time-input:disabled {
+  color: #b2b2b2;
+  background-color: #f5f5f5;
 }
 
 input.custom-input:not(textarea),
@@ -2378,8 +2402,8 @@ textarea.custom-input[type="date"].active,
 }
 
 .custom-dropdown .dropbtn svg {
-  -webkit-transform: translate(3px, -8px) rotateX(180deg);
-          transform: translate(3px, -8px) rotateX(180deg);
+  -webkit-transform: translate(3px, -8px) rotate(90deg);
+          transform: translate(3px, -8px) rotate(90deg);
   -webkit-transition: 0.4s ease;
   transition: 0.4s ease;
 }
@@ -2393,8 +2417,8 @@ textarea.custom-input[type="date"].active,
 }
 
 .custom-dropdown.show .dropbtn svg {
-  -webkit-transform: translate(3px, -8px);
-          transform: translate(3px, -8px);
+  -webkit-transform: translate(3px, -8px) rotate(180deg);
+          transform: translate(3px, -8px) rotate(180deg);
 }
 
 .custom-dropdown.show .dropbtn svg #Path_6068 {
@@ -2650,9 +2674,9 @@ textarea.custom-input[type="date"].active,
   margin: 10px 0;
 }
 
-.time,
-.mins,
-.meridian {
+.timepicker_wrap .time,
+.timepicker_wrap .mins,
+.timepicker_wrap .meridian {
   width: 60px;
   float: left;
   margin: 0px 10px;
@@ -2685,7 +2709,6 @@ textarea.custom-input[type="date"].active,
   position: relative;
 }
 
-/*input{ float:left;}*/
 input[type="date"]::-webkit-calendar-picker-indicator {
   background: none;
 }
