--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -2123,6 +2123,10 @@ table.custom-table {
 #profile {
   padding: 0 1rem;
 
+  @media screen and (min-width: 992px) {
+    padding: 0;
+  }
+
   @media screen and (max-width: 991px) and (min-width: 769px) {
     padding: 0 3rem;
   }
